--- a/episodes/season_18.yml
+++ b/episodes/season_18.yml
@@ -3,7 +3,7 @@ episodes:
 - title: The Mook, the Chef, the Wife and Her Homer
   season: 18
   episode: 1
-  release_date:
+  release_date: 2006-09-10
   directors:
   writers:
   description: Lisa befriends the son of mobster Fat Tony, whose dream is to become
@@ -16,7 +16,7 @@ episodes:
 - title: Jazzy and the Pussycats
   season: 18
   episode: 2
-  release_date:
+  release_date: 2006-09-17
   directors:
   writers:
   description: Lisa grows jealous after Bart discovers he's a talented jazz drummer;
@@ -28,7 +28,7 @@ episodes:
 - title: Please Homer, Don't Hammer 'em
   season: 18
   episode: 3
-  release_date:
+  release_date: 2006-09-24
   directors:
   writers:
   description: Marge starts her own carpentry business, only to discover that men
@@ -41,8 +41,8 @@ episodes:
 - title: Treehouse of Horror XVII
   season: 18
   episode: 4
-  release_date:
-  directors:
+  release_date: 2006-11-05
+  directors: ["David Silverman", "Matthew Faughnan"]
   writers:
   description: 'The Simpsons appear in three tales of horror: Homer turns into a rampaging
     blob; a creature from Jewish folklore does Bart''s bidding; a radio broadcast
@@ -54,9 +54,9 @@ episodes:
 - title: G.I. (Annoyed Grunt)
   season: 18
   episode: 5
-  release_date:
-  directors:
-  writers:
+  release_date: 2006-11-12
+  directors: ["Nancy Kruse"]
+  writers: ["Daniel Chun"]
   description: After Homer joins the Army, he's selected to play an enemy target during
     war games.  When the Army chases Homer into town, it pits the people of Springfield
     against the military.
@@ -67,9 +67,9 @@ episodes:
 - title: Moe 'N' a Lisa
   season: 18
   episode: 6
-  release_date:
-  directors:
-  writers:
+  release_date: 2006-11-19
+  directors: ["Mark Kirkland"]
+  writers: ["Matt Warburton"]
   description: Lisa helps Moe get a poem published, but is deeply hurt when Moe refuses
     to acknowledge her contribution.
   disneyplus_id: 1dbc7634-6c9b-451c-b98d-f37a04aca4c3
@@ -79,9 +79,9 @@ episodes:
 - title: Ice Cream of Margie (With the Light Blue Hair)
   season: 18
   episode: 7
-  release_date:
-  directors:
-  writers:
+  release_date: 2006-11-26
+  directors: ["Matthew Nastuk"]
+  writers: ["Carolyn Omine"]
   description: Homer finds happiness after he buys an ice cream truck; Marge finds
     her purpose in life when she makes sculptures out of popsicle sticks.
   disneyplus_id: ac78e6e7-e65b-4fdc-a5b1-ca92d60d8f7a
@@ -91,9 +91,9 @@ episodes:
 - title: The Haw-Hawed Couple
   season: 18
   episode: 8
-  release_date:
-  directors:
-  writers:
+  release_date: 2006-12-10
+  directors: ["Chris Clements"]
+  writers: ["Matt Selman"]
   description: Bart becomes Nelson's best friend; Homer becomes hooked on one of Lisa's
     fantasy books.
   disneyplus_id: cadd74ff-2dff-4715-983d-d725748114ec
@@ -103,9 +103,9 @@ episodes:
 - title: Kill Gil (Parts I and II)
   season: 18
   episode: 9
-  release_date:
-  directors:
-  writers:
+  release_date: 2006-12-17
+  directors: ["Bob Anderson"]
+  writers: ["Jeff Westbrook"]
   description: During the Christmas holiday, Marge attempts to muster the wherewithal
     to kick down-on-his-luck Gil out of the house.
   disneyplus_id: e23a7a91-620f-43cc-9b61-06fef0de06a9
@@ -115,9 +115,9 @@ episodes:
 - title: The Wife Aquatic
   season: 18
   episode: 10
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-01-07
+  directors: ["Lance Kramer"]
+  writers: ["Kevin Curran"]
   description: Marge returns to an island where she joyfully spent some of her childhood
     summers; Homer is forced to work on a fishing vessel that's threatened by a huge
     storm.
@@ -128,9 +128,9 @@ episodes:
 - title: Revenge is a Dish Best Served Three Times
   season: 18
   episode: 11
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-01-28
+  directors: ["Michael Polcino"]
+  writers: ["Joel H. Cohen"]
   description: The Simpsons spin three tales of revenge; Homer appears as the Count
     of Monte Cristo; Milhouse uses a gadget to get even with kids who've picked on
     him; comic hero Bart-Man searches for the villain who killed his parents.
@@ -141,9 +141,9 @@ episodes:
 - title: Little Big Girl
   season: 18
   episode: 12
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-02-11
+  directors: ["Raymond S. Persi"]
+  writers: ["Don Payne"]
   description: As Multicultural Day approaches, Lisa invents her own Native American
     heritage; after saving Springfield from a fire, Bart is rewarded with a driver's
     license-and ends up with a pregnant girlfriend who wants to wed.
@@ -154,9 +154,9 @@ episodes:
 - title: Springfield Up
   season: 18
   episode: 13
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-02-18
+  directors: ["Chuck Sheetz"]
+  writers: ["Matt Warburton"]
   description: In this spoof of the 'Up' documentaries, a filmmaker chronicles the
     lives of a group of Springfield residents, including Homer, who has seemingly
     made good on his quest to become a millionaire.
@@ -167,9 +167,9 @@ episodes:
 - title: Yokel Chords
   season: 18
   episode: 14
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-03-04
+  directors: ["Susie Dietter"]
+  writers: ["Michael Price"]
   description: Lisa tutors Cletus's children - until Krusty hires them as a novelty
     act for his television show; Bart sees a female therapist after he's caught frightening
     his classmates with a scary story.
@@ -180,9 +180,9 @@ episodes:
 - title: Rome-old and Juli-eh
   season: 18
   episode: 15
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-03-11
+  directors: ["Nancy Kruse"]
+  writers: ["Daniel Chun"]
   description: Homer is horrified when his father begins dating Selma; Bart and Lisa
     build a fort after acquiring a large quantity of empty cardboard boxes.
   disneyplus_id: cfbd1344-3525-4ec1-90f2-d29679f8ad4d
@@ -192,9 +192,9 @@ episodes:
 - title: Homerazzi
   season: 18
   episode: 16
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-03-25
+  directors: ["Matthew Nastuk"]
+  writers: ["J. Stewart Burns"]
   description: Homer tries his hand at making money by photographing celebrities and
     selling the images to the tabloids.
   disneyplus_id: b5af50a3-1980-4985-a51a-52d70c5e6021
@@ -204,9 +204,9 @@ episodes:
 - title: Marge Gamer
   season: 18
   episode: 17
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-04-22
+  directors: ["Bob Anderson"]
+  writers: ["J. Stewart Burns"]
   description: After discovering the Internet, Marge becomes a character in a popular
     online fantasy game; Homer referees Lisa's soccer team.
   disneyplus_id: 84482308-1ead-4b52-a111-879cf1e310f2
@@ -216,9 +216,9 @@ episodes:
 - title: The Boys of Bummer
   season: 18
   episode: 18
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-04-29
+  directors: ["Rob Oliver"]
+  writers: ["Michael Price"]
   description: Bart becomes the shame of Springfield after a bungle on the playing
     field causes the Isotots to lose a pennant game; Homer and Marge fight Reverend
     Lovejoy and his wife over possession of Homer's mattress.
@@ -229,9 +229,9 @@ episodes:
 - title: Crook and Ladder
   season: 18
   episode: 19
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-05-06
+  directors: ["Lance Kramer"]
+  writers: ["Bill Odenkirk"]
   description: Homer and his friends join the volunteer fire department, only to begin
     stealing from fire victims.
   disneyplus_id: 45796141-0dfc-4591-84a0-4e60e2261165
@@ -241,9 +241,9 @@ episodes:
 - title: Stop Or My Dog Will Shoot
   season: 18
   episode: 20
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-05-13
+  directors: ["Matthew Gaughnan"]
+  writers: ["John Frink"]
   description: When Santa's Little Helper gets a job on the police force, Bart buys
     a python to replace him.
   disneyplus_id: 5915e2fd-c3d0-41ca-a505-9fe2dfbcf891
@@ -253,9 +253,9 @@ episodes:
 - title: 24 Minutes
   season: 18
   episode: 21
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-05-20
+  directors: ["Raymond S. Persi"]
+  writers: ["Billy Kimball", "Ian Maxtone-Graham"]
   description: In this spoof of the television series '24,' Bart attempts to stop
     Jimbo, Dolph and Kearney before they unleash a deadly stink bomb at an upcoming
     school bake sale.
@@ -266,9 +266,9 @@ episodes:
 - title: You Kent Always Say What You Want
   season: 18
   episode: 22
-  release_date:
-  directors:
-  writers:
+  release_date: 2007-05-20
+  directors: ["Matthew Nastuk"]
+  writers: ["Tim Long"]
   description: Kent Brockman accidentally utters an obscenity during a news broadcast,
     leading to a heavy fine from the FCC - and costing Brockman his job.
   disneyplus_id: 74c57b86-7dfd-4d25-8008-46a91d898f3c
